// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders full layout properly 1`] = `
<div
  className="sc-ifAKCX hMpiYk"
  data-layout="full"
>
  <div>
    <div
      className="sc-bxivhb bAkBat"
      src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
    />
    <div
      className="sc-bdVaJa jYxQQe"
    />
  </div>
  <div
    className="sc-bwzfXH domCCz"
  >
    <div
      className="sc-htpNat dcTJHt"
    >
      <div
        className="file__Vertical-xem9vw-2 bhdvPs"
      >
        Market Analysis
      </div>
      <div
        className="file__Title-xem9vw-1 igXYRE"
      >
        New York's Next Art District
      </div>
      <div
        className="file__SubHeader-xem9vw-4 hpRiCe"
      >
        <div
          className="file__SubHeaderText-xem9vw-6 ZcHLn"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDate-xem9vw-7 hjcNYe"
        >
          <div
            className="file__BulletText-xem9vw-5 kkJwtL"
          >
            Daniel Kunitz
          </div>
          <div
            className="file__BulletText-xem9vw-5 kkJwtL"
          >
            Jan 4, 2017
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders split layout properly 1`] = `
<div
  className="sc-ifAKCX hMpiYk"
  data-layout="split"
>
  <div
    className="sc-bxivhb bAkBat"
    src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
  />
  <div
    className="sc-bwzfXH domCCz"
  >
    <div
      className="sc-htpNat dcTJHt"
    >
      <div
        className="file__Vertical-xem9vw-2 bhdvPs"
      >
        Market Analysis
      </div>
      <div
        className="file__Title-xem9vw-1 igXYRE"
      >
        New York's Next Art District
      </div>
      <div
        className="file__SubHeader-xem9vw-4 hpRiCe"
      >
        <div
          className="file__SubHeaderText-xem9vw-6 ZcHLn"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDate-xem9vw-7 hjcNYe"
        >
          <div
            className="file__BulletText-xem9vw-5 kkJwtL"
          >
            Daniel Kunitz
          </div>
          <div
            className="file__BulletText-xem9vw-5 kkJwtL"
          >
            Jan 4, 2017
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders text layout properly 1`] = `
<div
  className="sc-ifAKCX hMpiYk"
  data-layout="text"
>
  <div
    className="sc-bwzfXH domCCz"
  >
    <div
      className="sc-htpNat dcTJHt"
    >
      <div
        className="file__Vertical-xem9vw-2 bhdvPs"
      >
        Market Analysis
      </div>
      <div
        className="file__Title-xem9vw-1 igXYRE"
      >
        Looking Into the Future
      </div>
      <div
        className="file__SubHeader-xem9vw-4 hpRiCe"
      >
        <div
          className="file__SubHeaderText-xem9vw-6 ZcHLn"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDate-xem9vw-7 hjcNYe"
        >
          <div
            className="file__BulletText-xem9vw-5 kkJwtL"
          >
            Daniel Kunitz
          </div>
          <div
            className="file__BulletText-xem9vw-5 kkJwtL"
          >
            Jan 4, 2017
          </div>
        </div>
      </div>
    </div>
    <img
      className="file__Image-xem9vw-3 gxZoGM"
      src="https://artsy-media-uploads.s3.amazonaws.com/YqTtwB7AWqKD95NGItwjJg%2FRachel_Rossin_portrait_2.jpg"
    />
  </div>
</div>
`;
